--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  CHANGES:

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

    * ``bzr rm`` will now scan for files that are missing and remove just
      them automatically, much as ``bzr add`` scans for new files that
      are not ignored and adds them automatically. (Robert Collins)

  FEATURES

    * Support for GSSAPI authentication when using FTP as documented in 
      RFC2228. (Jelmer Vernooij, #49623)

  IMPROVEMENTS:

    * ``bzr branch`` uses the default stacking policy if the branch format
      supports it. (Aaron Bentley)

    * ``bzr init`` and ``bzr init-repo`` will now print out the same as
      ``bzr info`` if it completed successfully.
      (Marius Kruger)

    * ``bzr uncommit`` logs the old tip revision id, and displays how to
      restore the branch to that tip using ``bzr pull``.  This allows you
      to recover if you realize you uncommitted the wrong thing.
      (John Arbash Meinel)

  BUG FIXES:

    * ``bzr rm`` is now aliased to ``bzr del`` for the convenience of svn
      users. (Robert Collins, #205416)

    * Catch the infamous "select/poll returned error" which occurs when
      pycurl try to send a body request to an HTTP/1.0 server which has
      already refused to handle the request. (Vincent Ladeuil, #225020)

    * ``FTPTransport.stat()`` would return ``0000`` as the permission bits
      for the containing ``.bzr/`` directory (it does not implement
      permissions). This would cause us to set all subdirectories to
      ``0700`` and files to ``0600`` rather than leaving them unmodified.
      Now we ignore ``0000`` as the permissions and assume they are
      invalid. (John Arbash Meinel, #259855)

    * Merging from a previously joined branch will no longer cause 
      a traceback. (Jelmer Vernooij, #203376)
    
    * Running ``bzr st PATH_TO_TREE`` will no longer suppress merge